fixing z-index for thumbnail images showing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -284,7 +284,7 @@ h1.sec-title   { font-size:2.2em;
           box-shadow:rgba(0, 0, 0, 0.148438) 0 1px 2px;
           -webkit-box-shadow: rgba(0, 0, 0, 0.148438) 0 1px 2px;
           position: relative;
-         z-index: -1;
+         z-index: 1;
 
           img  { max-width:100%;
          width: 100%;
